<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppDuo_Uniovi</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_main">AppDuo_Uniovi</string>

    <!-- Secciones -->
    <string name="title_section1">Actos</string>
    <string name="title_section2">Anuncios</string>
    <string name="title_section3">Becas</string>
    <string name="title_section4">Boletines</string>
    <string name="title_section5">Convocatorias</string>
    <string name="title_section6">Otros</string>

    <!-- Strings para la pantalla de descarga inicial -->
    <string name="boton_iniciar_descarga">Iniciar descarga</string>
    <string name="texto_descarga_inicial">Bienvenido a AppDuo. Para empezar, es necesario descargar unos datos.
        La descarga tardará unos minutos. </string>

    <!-- Menús -->
    <string name="action_voz">Leer con Texto a Voz</string>
    <string name="action_ajustes">Ajustes</string>
    <string name="action_navegador">Ver en el navegador</string>

    <!-- Strings para la pantalla de detalles de la noticia -->
    <string name="boton_leer">Leer con Texto a Voz</string>
    <string name="boton_navegador">Ver en el navegador</string>

    <!-- Strings para la ventana de ajustes -->
    <string name="datosAntiguos">Limpieza de datos antiguos</string>
    <string name="detalleIntervaloBorrado">Configurar los dias que deben conservarse las noticias</string>
    <string name="tituloIntervaloBorrado">Escoger intervalo de borrado</string>
    <string name="tituloIntervalo">Escoger intervalo</string>
    <string name="detalleLimpiarAhora">Ejecutar ahora la limpieza de noticias antiguas</string>
    <string name="tituloLimpiarAhora">Limpiar ahora</string>
    <string name="actualizacion">Descarga de nuevas noticias</string>
    <string name="detalleIntervaloActualizacion">Configurar cuando deben descargarse nuevas noticias</string>
    <string name="tituloIntervaloActualizacion">Escoger intervalo de descarga</string>
    <string name="detalleActualizacionManual">Descargar nuevas noticias ahora</string>
    <string name="tituloActualizacionManual">Actualizar ahora</string>
    <string name="tituloAyuda">Ayuda</string>
    <string name="detalleAcercaDe">Acerca de esta aplicación</string>
    <string name="tituloAcercaDe">Acerca de AppDuo</string>
    <string name="detalleAyuda">Ayuda con los comandos de voz de AppDuo</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    
    <!-- Strings mensajes ayuda -->
    <string name="mensajeAyuda">Los comandos de voz de esta aplicación son: 
 	 \n Siguiente: para que la aplicación lea la siguiente noticia. 
 	 \n Anterior: para que la aplicación lea la noticia anterior.
 	 \n Detalle: para que la aplicación te dé mas información de una noticia.
	\n Parar: terminará el control por voz de la aplicación.
	\n Ayuda: para que la aplicación lea la ayuda de los comandos de voz.
	\n Guardar: para que la aplicación guarde una noticia.
	\n Borrar: para que la aplicación borre una noticia.</string>
	<string name="textoAcerdaDe">AppDuo - 2014. Está aplicación ha sido desarrollada dentro de la Universidad de Oviedo.</string>
 
	<!-- otros avisos -->
	<string name="mensajeAvisoLimpiarAhora">Se procederá al borrado de todas las noticias antiguas. \n ¿Desea continuar?</string> 
 	<string name="toastAvisoLimpiarAhora">Se borrarán las noticias antiguas ahora</string> 	
 	<string name="noSePudoCancelarAlarma"> No se pudo cancelar la alarma borrado. </string> 	
 	<string name="comprobaraNuevasNoticias"> Se comprobará si existen nuevas noticias ahora  </string>
 	<string name="noPudoCancelarAlarma"> No se pudo cancelar la alarma de descarga. </string>	
 	

</resources>